--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,8 @@ body {
 
 .underline {
     display: block;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
     border-bottom: 1px solid grey;
 }
 
@@ -68,6 +70,6 @@ body {
 }
 
 .annotation {
-    text-align: center;
+    margin-bottom: 2rem;
     font-size: 2rem;
 }
