--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,11 @@
 /* BASE STYLES
 /*************************/
 
+body {
+    margin-top: 3rem;
+    margin-bottom: 9rem;
+}
+
 a {
     text-decoration: none;
     color: white;
@@ -10,6 +15,7 @@ a {
 h2  {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 7%;
+    margin-bottom: 4rem;
 }
 
 h2:nth-child(4), .underline:nth-child(3){
@@ -60,7 +66,7 @@ body {
 
 .underline {
     display: block;
-    margin-top: 3rem;
+    margin-top: 5rem;
     margin-bottom: 2rem;
     border-bottom: 1px solid grey;
 }
