--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,11 @@ section {
     margin-left:18%;
 }
 
+button {
+    display: inline;
+    margin-left: 90%;
+}
+
 /*************************
 /* ROOT FONT STYLE
 /*************************/
