--- a/assets/style.css
+++ b/assets/style.css
@@ -131,3 +131,13 @@ body {
     transform-origin: 100% 50%;
     transform: rotate(45deg) scale(0) translateZ(0);
 }
+
+/*************************
+/* MEDIA QUERIES
+/*************************/
+
+@media screen and (max-height: 440px){
+    .colorful-switch {
+        height: 5.5%;
+    }
+}
